--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>web Design | welcome</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
@@ -48,7 +48,7 @@
     <section id="boxes">
         <div class="container">
             <div class="box">
-                <img src="./img/download (3).jpg">
+                <img src="./css/img/jpg12.jpg">
                 <h3>HTML5 Markup</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipi
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="box">
-                <img src="./img/download (3).jpg">
+                <img src="./css/img/jpg12.jpg">
                 <h3>CSS3 Styling</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipi
@@ -68,7 +68,7 @@
                 </p>
             </div>
             <div class="box">
-                <img src="./img/download (6).jpg">
+                <img src="./css/img/jpg12.jpg">
                 <h3>Graphic Design</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipi
